lab 1: changed ORM from sequelize to prisma
